# LoadBalancing

./: build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/demoproject/: CameraPreview.java  MainActivity.java  NCNN.java  Ncnn.java  ReceiveDataTask.java  Receiver.java
app/src/main/java/com/example/demoproject_master/: DataHolderDET.java  DataHolderSEG.java  ProcessAI.java  ReceiveDET.java  ReceiveSEG.java
app/src/main/jni/: CMakeLists.txt  ncnn.cpp  yolov8.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
